# adk

./: .gitignore  .gitmodules  CHATGPT_EXPERT_REVIEW_RESPONSE.md  CODE_AUDIT.md  CODE_QUALITY_ASSESSMENT_V2.md  COMPLETE_EVENT_SYSTEM_SUMMARY.md  CURSOR_ENHANCEMENT_PROMPT.md  CURSOR_IMPLEMENTATION_PROMPT.md  CURSOR_PLAN_UPDATE.md  EVENT_BUS_COMPLETE_IMPLEMENTATION.md  EVENT_BUS_IMPLEMENTATION_SUMMARY.md  EVENT_BUS_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  QUICK_START_INTEGRATION.md  README.md  REVISED_ARCHITECTURE_WITH_AGUI.md  UNIFIED_EVENT_SCHEMA.md  VERIFICATION_REPORT.md  docker-compose.monitoring.yml  docker-compose.yml  justfile  pyproject.toml
backend/: Dockerfile.worker  pyproject.toml  requirements.txt  test_event_bus.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  base_agent.py
backend/app/api/routes/: agents.py  (+5 more)
backend/app/event_bus/: __init__.py  bus.py  channels.py  dispatcher.py  schema.py
backend/app/middleware/: auth.py  error_handler.py  logging.py  metrics.py  rate_limit.py
backend/app/models/: events.py
backend/app/services/: cache_service.py  langfuse_setup.py  n8n_service.py  observability.py  session_service.py  task_service.py
backend/app/tasks/: __init__.py  agent_tasks.py
backend/app/workflows/: __init__.py  deployment_workflow.py  review_workflow.py
backend/scripts/: run_evaluation.py  seed_data.py  setup_database.py  start_agents.py  start_rq_worker.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  test_agent_workflows.py
backend/tests/eval/: agent_evaluator.py  metrics.py
backend/tests/integration/: test_agents.py  test_auth_flow.py  test_chat.py  test_services.py  test_task_queue.py
backend/tests/unit/: test_auth.py  test_cache.py  test_health.py
(+98 files in other folders)
